Added notebooks with fitting, analyzing metrics and dumping LogReg and RF models

--- a/year_project/notebooks/hse-medical-pictures-analyze_random_forest.ipynb
+++ b/year_project/notebooks/hse-medical-pictures-analyze_random_forest.ipynb
@@ -2,37 +2,37 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a5f31135",
+   "id": "752be228",
    "metadata": {
     "papermill": {
-     "duration": 0.004385,
-     "end_time": "2024-01-15T19:25:58.533610",
+     "duration": 0.004893,
+     "end_time": "2024-01-15T15:16:56.458082",
      "exception": false,
-     "start_time": "2024-01-15T19:25:58.529225",
+     "start_time": "2024-01-15T15:16:56.453189",
      "status": "completed"
     },
     "tags": []
    },
    "source": [
-    "## Логистическая регрессия"
+    "## Cлучайный лес"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e5e85d11",
+   "id": "999f9d27",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T19:25:58.544286Z",
-     "iopub.status.busy": "2024-01-15T19:25:58.543464Z",
-     "iopub.status.idle": "2024-01-15T19:26:07.054124Z",
-     "shell.execute_reply": "2024-01-15T19:26:07.052947Z"
+     "iopub.execute_input": "2024-01-15T15:16:56.469227Z",
+     "iopub.status.busy": "2024-01-15T15:16:56.468605Z",
+     "iopub.status.idle": "2024-01-15T15:17:05.219014Z",
+     "shell.execute_reply": "2024-01-15T15:17:05.217571Z"
     },
     "papermill": {
-     "duration": 8.519461,
-     "end_time": "2024-01-15T19:26:07.057154",
+     "duration": 8.760878,
+     "end_time": "2024-01-15T15:17:05.223310",
      "exception": false,
-     "start_time": "2024-01-15T19:25:58.537693",
+     "start_time": "2024-01-15T15:16:56.462432",
      "status": "completed"
     },
     "tags": []
@@ -62,13 +62,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5518e49a",
+   "id": "225c9db1",
    "metadata": {
     "papermill": {
-     "duration": 0.003803,
-     "end_time": "2024-01-15T19:26:07.065433",
+     "duration": 0.003785,
+     "end_time": "2024-01-15T15:17:05.231574",
      "exception": false,
-     "start_time": "2024-01-15T19:26:07.061630",
+     "start_time": "2024-01-15T15:17:05.227789",
      "status": "completed"
     },
     "tags": []
@@ -80,19 +80,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "39a12cdd",
+   "id": "e6488f06",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T19:26:07.075913Z",
-     "iopub.status.busy": "2024-01-15T19:26:07.075073Z",
-     "iopub.status.idle": "2024-01-15T20:06:12.120254Z",
-     "shell.execute_reply": "2024-01-15T20:06:12.117895Z"
+     "iopub.execute_input": "2024-01-15T15:17:05.241893Z",
+     "iopub.status.busy": "2024-01-15T15:17:05.241149Z",
+     "iopub.status.idle": "2024-01-15T16:05:49.014146Z",
+     "shell.execute_reply": "2024-01-15T16:05:49.012723Z"
     },
     "papermill": {
-     "duration": 2405.05476,
-     "end_time": "2024-01-15T20:06:12.124263",
+     "duration": 2923.782227,
+     "end_time": "2024-01-15T16:05:49.017775",
      "exception": false,
-     "start_time": "2024-01-15T19:26:07.069503",
+     "start_time": "2024-01-15T15:17:05.235548",
      "status": "completed"
     },
     "tags": []
@@ -174,7 +174,7 @@
     "                img = np.array(v2.Resize(size=(256, 256))(ImageOps.grayscale(img)))\n",
     "                \n",
     "                for p in range(3): \n",
-    "                    # применяем аугментации 2 раза \n",
+    "                    # применяем аугментации 4 раза \n",
     "                    if p:\n",
     "                        img = transform(image=img)[\"image\"]\n",
     "                    \n",
@@ -195,13 +195,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "393ee153",
+   "id": "a5cdd7c7",
    "metadata": {
     "papermill": {
-     "duration": 0.009332,
-     "end_time": "2024-01-15T20:06:12.147088",
+     "duration": 0.008655,
+     "end_time": "2024-01-15T16:05:49.035566",
      "exception": false,
-     "start_time": "2024-01-15T20:06:12.137756",
+     "start_time": "2024-01-15T16:05:49.026911",
      "status": "completed"
     },
     "tags": []
@@ -213,19 +213,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aca3bf6b",
+   "id": "34f433e2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T20:06:12.167765Z",
-     "iopub.status.busy": "2024-01-15T20:06:12.166860Z",
-     "iopub.status.idle": "2024-01-16T00:26:59.198382Z",
-     "shell.execute_reply": "2024-01-16T00:26:59.192131Z"
+     "iopub.execute_input": "2024-01-15T16:05:49.057245Z",
+     "iopub.status.busy": "2024-01-15T16:05:49.055781Z",
+     "iopub.status.idle": "2024-01-15T16:36:52.115485Z",
+     "shell.execute_reply": "2024-01-15T16:36:52.113865Z"
     },
     "papermill": {
-     "duration": 15647.086057,
-     "end_time": "2024-01-16T00:26:59.242154",
+     "duration": 1863.081731,
+     "end_time": "2024-01-15T16:36:52.126612",
      "exception": false,
-     "start_time": "2024-01-15T20:06:12.156097",
+     "start_time": "2024-01-15T16:05:49.044881",
      "status": "completed"
     },
     "tags": []
@@ -235,51 +235,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting of LogisticRegression has started...\n",
-      "Fitting of LogisticRegression has finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
+      "Fitting of RandomForestClassifier has started...\n",
+      "Fitting of RandomForestClassifier has finished!\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# обучение модели\n",
-    "clf = LogisticRegression(tol=1e-4, max_iter=2500, random_state=123)\n",
-    "print(f'Fitting of LogisticRegression has started...')\n",
-    "clf.fit(X_train, y_train)\n",
-    "print(f'Fitting of LogisticRegression has finished!')"
+    "rf_clf = RandomForestClassifier(min_samples_leaf=5, random_state=123)\n",
+    "print(f'Fitting of RandomForestClassifier has started...')\n",
+    "rf_clf.fit(X_train, y_train)\n",
+    "print(f'Fitting of RandomForestClassifier has finished!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3d8d530d",
+   "id": "e4151f26",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-16T00:26:59.268531Z",
-     "iopub.status.busy": "2024-01-16T00:26:59.267784Z",
-     "iopub.status.idle": "2024-01-16T00:27:08.928395Z",
-     "shell.execute_reply": "2024-01-16T00:27:08.926773Z"
+     "iopub.execute_input": "2024-01-15T16:36:52.146219Z",
+     "iopub.status.busy": "2024-01-15T16:36:52.145655Z",
+     "iopub.status.idle": "2024-01-15T16:37:29.963898Z",
+     "shell.execute_reply": "2024-01-15T16:37:29.961078Z"
     },
     "papermill": {
-     "duration": 9.68199,
-     "end_time": "2024-01-16T00:27:08.933298",
+     "duration": 37.834982,
+     "end_time": "2024-01-15T16:37:29.970201",
      "exception": false,
-     "start_time": "2024-01-16T00:26:59.251308",
+     "start_time": "2024-01-15T16:36:52.135219",
      "status": "completed"
     },
     "tags": []
@@ -287,26 +273,26 @@
    "outputs": [],
    "source": [
     "# предикты\n",
-    "y_pred_test = clf.predict(X_test)\n",
-    "y_pred_proba_test = clf.predict_proba(X_test)"
+    "y_pred_test = rf_clf.predict(X_test)\n",
+    "y_pred_proba_test = rf_clf.predict_proba(X_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "de591037",
+   "id": "429cb638",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-16T00:27:09.506720Z",
-     "iopub.status.busy": "2024-01-16T00:27:09.506247Z",
-     "iopub.status.idle": "2024-01-16T00:27:09.635088Z",
-     "shell.execute_reply": "2024-01-16T00:27:09.633870Z"
+     "iopub.execute_input": "2024-01-15T16:37:30.505141Z",
+     "iopub.status.busy": "2024-01-15T16:37:30.504635Z",
+     "iopub.status.idle": "2024-01-15T16:37:30.611723Z",
+     "shell.execute_reply": "2024-01-15T16:37:30.610553Z"
     },
     "papermill": {
-     "duration": 0.142181,
-     "end_time": "2024-01-16T00:27:09.637653",
+     "duration": 0.120834,
+     "end_time": "2024-01-15T16:37:30.614516",
      "exception": false,
-     "start_time": "2024-01-16T00:27:09.495472",
+     "start_time": "2024-01-15T16:37:30.493682",
      "status": "completed"
     },
     "tags": []
@@ -317,10 +303,10 @@
      "output_type": "stream",
      "text": [
       "Metrics of RandomForest on test: \n",
-      "   accuracy_avg  - 0.10\n",
-      "   precision_avg - 0.10\n",
-      "   reсall_avg    - 0.10\n",
-      "   roc_auc_avg   - 0.55\n"
+      "   accuracy_avg  - 0.15\n",
+      "   precision_avg - 0.15\n",
+      "   reсall_avg    - 0.15\n",
+      "   roc_auc_avg   - 0.70\n"
      ]
     }
    ],
@@ -336,19 +322,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "638bd8b9",
+   "id": "6d8deb46",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-16T00:27:09.659863Z",
-     "iopub.status.busy": "2024-01-16T00:27:09.659126Z",
-     "iopub.status.idle": "2024-01-16T00:27:09.676067Z",
-     "shell.execute_reply": "2024-01-16T00:27:09.675145Z"
+     "iopub.execute_input": "2024-01-15T16:37:30.635778Z",
+     "iopub.status.busy": "2024-01-15T16:37:30.635011Z",
+     "iopub.status.idle": "2024-01-15T16:37:31.287807Z",
+     "shell.execute_reply": "2024-01-15T16:37:31.286545Z"
     },
     "papermill": {
-     "duration": 0.032943,
-     "end_time": "2024-01-16T00:27:09.680355",
+     "duration": 0.6666,
+     "end_time": "2024-01-15T16:37:31.290415",
      "exception": false,
-     "start_time": "2024-01-16T00:27:09.647412",
+     "start_time": "2024-01-15T16:37:30.623815",
      "status": "completed"
     },
     "tags": []
@@ -367,7 +353,7 @@
     "import pickle \n",
     "\n",
     "# сохраняем модель в pickle файл\n",
-    "pickle.dump(clf, open('/kaggle/working/logreg_clf.pkl', 'wb'))\n",
+    "pickle.dump(rf_clf, open('/kaggle/working/RF_model.pkl', 'wb'))\n",
     "print(f'\\nModel is dumped!')"
    ]
   }
@@ -407,14 +393,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 18078.942117,
-   "end_time": "2024-01-16T00:27:13.603607",
+   "duration": 4842.004725,
+   "end_time": "2024-01-15T16:37:34.257869",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-15T19:25:54.661490",
+   "start_time": "2024-01-15T15:16:52.253144",
    "version": "2.4.0"
   }
  },
