Add comparison of best NNs with Adam and StepLR

--- a/year_project/notebooks/neural-networks-filatov/image-preprocessing.ipynb
+++ b/year_project/notebooks/neural-networks-filatov/image-preprocessing.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "57aed000",
+   "id": "4e5e599e",
    "metadata": {
     "papermill": {
-     "duration": 0.00297,
-     "end_time": "2024-05-18T10:25:17.937836",
+     "duration": 0.002441,
+     "end_time": "2024-05-27T06:37:35.243792",
      "exception": false,
-     "start_time": "2024-05-18T10:25:17.934866",
+     "start_time": "2024-05-27T06:37:35.241351",
      "status": "completed"
     },
     "tags": []
@@ -26,19 +26,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "07a3911d",
+   "id": "a4a64ecb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-18T10:25:17.945534Z",
-     "iopub.status.busy": "2024-05-18T10:25:17.944807Z",
-     "iopub.status.idle": "2024-05-18T10:25:28.507938Z",
-     "shell.execute_reply": "2024-05-18T10:25:28.506827Z"
+     "iopub.execute_input": "2024-05-27T06:37:35.249878Z",
+     "iopub.status.busy": "2024-05-27T06:37:35.249247Z",
+     "iopub.status.idle": "2024-05-27T06:37:44.629166Z",
+     "shell.execute_reply": "2024-05-27T06:37:44.627960Z"
     },
     "papermill": {
-     "duration": 10.570167,
-     "end_time": "2024-05-18T10:25:28.510651",
+     "duration": 9.385863,
+     "end_time": "2024-05-27T06:37:44.631817",
      "exception": false,
-     "start_time": "2024-05-18T10:25:17.940484",
+     "start_time": "2024-05-27T06:37:35.245954",
      "status": "completed"
     },
     "tags": []
@@ -62,13 +62,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "123e415a",
+   "id": "07aa3c66",
    "metadata": {
     "papermill": {
-     "duration": 0.002191,
-     "end_time": "2024-05-18T10:25:28.515575",
+     "duration": 0.001831,
+     "end_time": "2024-05-27T06:37:44.635997",
      "exception": false,
-     "start_time": "2024-05-18T10:25:28.513384",
+     "start_time": "2024-05-27T06:37:44.634166",
      "status": "completed"
     },
     "tags": []
@@ -80,19 +80,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "622b3f12",
+   "id": "df497d51",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-18T10:25:28.522882Z",
-     "iopub.status.busy": "2024-05-18T10:25:28.522012Z",
-     "iopub.status.idle": "2024-05-18T10:39:13.497546Z",
-     "shell.execute_reply": "2024-05-18T10:39:13.496163Z"
+     "iopub.execute_input": "2024-05-27T06:37:44.641927Z",
+     "iopub.status.busy": "2024-05-27T06:37:44.641344Z",
+     "iopub.status.idle": "2024-05-27T06:49:14.571448Z",
+     "shell.execute_reply": "2024-05-27T06:49:14.570188Z"
     },
     "papermill": {
-     "duration": 824.982689,
-     "end_time": "2024-05-18T10:39:13.500618",
+     "duration": 689.936195,
+     "end_time": "2024-05-27T06:49:14.574151",
      "exception": false,
-     "start_time": "2024-05-18T10:25:28.517929",
+     "start_time": "2024-05-27T06:37:44.637956",
      "status": "completed"
     },
     "tags": []
@@ -115,9 +115,9 @@
     "    os.mkdir(f'{data}/images')\n",
     "    \n",
     "    augmentation = A.Compose([\n",
-    "        A.Rotate(limit=180, border_mode=4, p=1.0),\n",
-    "        A.GaussNoise(var_limit=(20, 40), p=0.5), \n",
-    "        A.RandomBrightnessContrast(brightness_limit=0.15, contrast_limit=0.15, p=0.5)\n",
+    "        A.HorizontalFlip(p=0.5),\n",
+    "        A.GaussNoise(p=0.5, var_limit=(10, 30)), \n",
+    "        A.RandomBrightnessContrast(p=0.5, brightness_limit=0.15, contrast_limit=0.15)\n",
     "    ])\n",
     "    \n",
     "    idx = 0\n",
@@ -134,8 +134,8 @@
     "                        input_image = Image.fromarray(augmentation(image=np.array(input_image))[\"image\"])\n",
     "                    \n",
     "                    # сохраняем изображения в новые директории\n",
-    "                    input_image.save(f'{data}/images/image({idx}).jpg')    \n",
-    "                    \n",
+    "                    input_image.save(f'{data}/images/({idx})-img.jpg')    \n",
+    "\n",
     "                    # записываем лейблы в тензор\n",
     "                    labels[idx] = i\n",
     "\n",
@@ -190,14 +190,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 840.723588,
-   "end_time": "2024-05-18T10:39:15.131985",
+   "duration": 704.427981,
+   "end_time": "2024-05-27T06:49:16.835539",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-05-18T10:25:14.408397",
+   "start_time": "2024-05-27T06:37:32.407558",
    "version": "2.5.0"
   }
  },
